--- a/camel-debezium/pom.xml
+++ b/camel-debezium/pom.xml
@@ -55,7 +55,7 @@
     </dependency>
       <dependency>
           <groupId>org.apache.camel</groupId>
-          <artifactId>camel-debezium</artifactId>
+          <artifactId>camel-debezium-mysql</artifactId>
       </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
