--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-server.port=8081
-
+server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/debezium
-spring.datasource.username=user
+spring.datasource.url=jdbc:mysql://debezium-db:3306/debezium
+spring.datasource.username=debezium
 spring.datasource.password=debezium
