--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://debezium-db:3306/debezium
-spring.datasource.username=debezium
+spring.datasource.url=jdbc:mysql://mysql:3306/user
+spring.datasource.username=root
 spring.datasource.password=debezium
